<resources>
    <string name="app_name">Presentación</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="splash_title">Android</string>
    <string name="title_activity_container">ContainerActivity</string>
    <string name="transition_name_icon">transition_name_icon</string>
    <string name="transition_name_title">transition_name_title</string>
    <string name="action_settings">Configuración</string>
    <string name="nav_introduction">Introducción</string>
    <string name="nav_life">La vida de un desarrollador</string>
    <string name="nav_future">Futuro del desarrollo</string>
    <string name="group_subsection_label">Anexos</string>
    <string name="nav_references">Referencias</string>
    <string name="nav_thanks">Agradecimiento</string>
    <string name="nav_header_main_name">Mauricio Hernández</string>
    <string name="nav_header_main_email_label">Email:&#160;</string>
    <string name="nav_header_main_email">mauricio.hernandez@ironbit.com.mx</string>
    <string name="nav_header_main_github_label">GitHub:&#160;</string>
    <string name="nav_header_main_github">proyectox123</string>
    <string name="nav_header_main_linkedin_label">LinkedIn:&#160;</string>
    <string name="nav_header_main_linkedin">mauricio-hernández-oyarzábal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introduction_item_history">Historia de Android</string>
    <string name="introduction_item_dashboards">Distribuciones</string>
    <string name="introduction_item_screen_sizes">Densidades y tamaños de pantalla</string>
    <string name="introduction_item_platform_architecture">Arquitectura de la plataforma</string>
    <string name="references_item_label_history">Historia de Android:</string>
    <string name="references_item_history">https://en.wikipedia.org/wiki/Android_version_history</string>
    <string name="references_item_label_distribution_features">Historia de cada versión por nivel de API</string>
    <string name="references_item_distribution_features">https://en.wikipedia.org/wiki/Android_version_history</string>
    <string name="references_item_label_dashboards">Paneles de control:</string>
    <string name="references_item_dashboards">https://developer.android.com/about/dashboards/index.html</string>
    <string name="references_item_label_screen_supports">Multiples pantallas:</string>
    <string name="references_item_screen_supports">https://developer.android.com/guide/practices/screens_support.html</string>
    <string name="references_item_label_platform_architecture">Arquitectura de la plataforma:</string>
    <string name="references_item_platform_architecture">https://developer.android.com/guide/platform/index.html</string>
    <string name="references_item_label_development_future">Novedades Android 8:</string>
    <string name="references_item_development_future">https://www.cnet.com/es/noticias/android-2017-futuro-novedades-android-8/</string>
    <string name="history_detail_features_label">Características:</string>
    <string name="history_detail_features_1_alpha">
        * Primer dispositivo Android: HTC Dream.\n\n
        * Navegador Web para visualizar páginas webs en full HTML y XHTML.\n\n
        * Sincronización de Gmail, Google Contacts y Google Calendar.\n\n
        * Reproductor multimedia.\n\n
        * Google Maps con Latitude y Street View para ver mapas e imágenes por satélite.\n\n
        * Soporte para Wi-Fi y Bluetooth.\n\n
    </string>
    <string name="history_detail_features_2_petit_four">
        * Detalles y reseñas disponibles cuando un usuario busca negocios en Mapas.\n\n
        * Posibilidad de guardar archivos adjuntos en los mensajes.\n\n
    </string>
    <string name="history_detail_features_3_cupcake">
        * Soporte para teclados virtuales de terceros con predicción de texto y diccionario de usuarios para palabras personalizadas.\n\n
        * Soporte para Widgets.\n\n
        * Grabación y reproducción en formatos MPEG-4 y 3GP.\n\n
        * Pantallas de transiciones animadas.\n\n
        * Agregada opción de auto-rotación.\n\n
    </string>
    <string name="history_detail_features_4_donut">
        * Mejora en la búsqueda por entrada de texto y voz para incluir historial de favoritos, contactos y la web.\n\n
        * Habilidad de los desarrolladores de incluir su contenido en los resultados de búsqueda.\n\n
        * Motor multi-lenguaje de Síntesis de habla para permitir a cualquier aplicación de Android "hablar" una cadena de texto.\n\n
        * Búsqueda facilitada y habilidad para ver capturas de las aplicaciones en el Android Market(Google Play).\n\n
        * Galería, cámara y videocámara con mejor integración, con rápido acceso a la cámara.\n\n
        * Soporte para resoluciones de pantalla WVGA.
    </string>
    <string name="history_detail_features_5_eclair">
        * Sincronización cuenta expandida, permitiendo a los usuarios agregar múltiples cuentas al dispositivo para sincronización de correo y contactos.\n\n
        * Soporte Bluetooth 2.1.\n\n
        * Nuevas características para la cámara, incluyendo soporte de flash, zoom digital, modo escena, balance de blancos, efecto de colores y enfoque macro.\n\n
        * Optimización en velocidad de hardware y GUI renovada.\n\n
        * Soporte para más tamaños de pantalla y resoluciones, con mejor ratio de contraste.\n\n
        * Clase MotionEvent mejorada para rastrear eventos multi-touch.
    </string>
    <string name="history_detail_features_6_froyo">
        * Optimizaciones en velocidad, memoria y rendimiento.\n\n
        * Integración del motor de JavaScript V8 de Chrome en el navegador.\n\n
        * Soporte para el servicio Android Cloud to Device Messaging (C2DM), habilitando notificaciones push.\n\n
        * Soporte para contraseñas numéricas y alfanuméricas.\n\n
        * Soporte para subida de archivos en la aplicación del navegador.\n\n
        * Soporte para instalación de aplicaciones en la memoría expandible.\n\n
        * Soporte para Adobe Flash.
    </string>
    <string name="history_detail_features_7_gingerbread">
        * Actualizado el diseño de la interfaz de usuario con incrementos en velocidad y simpleza.\n\n
        * Soporte para tamaños y resoluciones de pantalla extra-grandes (WXGA y mayores).\n\n
        * Soporte nativo para SIP y telefonía por internet VoIP.\n\n
        * Entrada de texto del teclado virtual más rápida e intuitiva, con mejoras en precisión, texto sugerido y entrada por voz.\n\n
        * Nuevo gestor de descargas, que da a los usuarios fácil acceso a cualquier archivo descargado del navegador, correo electrónico u otra aplicación.\n\n
        * Mejoras en audio, gráficos y entrada para desarrolladores de juegos.\n\n
        * Recolector basura concurrente para incrementar el rendimiento.\n\n
        * Soporte nativo para más sensores (tales como giroscopio y barómetro).
    </string>
    <string name="history_detail_features_8_honeycomb">
        * Soporte optimizado para tablets, con una nueva y "virtual" interfaz de usuario holográfica.\n\n
        * Agregada barra de sistema, con características de acceso rápido a notificaciones, estados y botones de navegación suavizados, disponible en la parte inferior de la pantalla.\n\n
        * Añadida barra de acción (Action Bar en inglés), entregando acceso a opciones contextuales, navegación, widgets u otros tipos de contenido en la parte superior de la pantalla.\n\n
        * Multitarea simplificada – tocando Aplicaciones recientes en la barra del sistema permite a los usuarios ver instantáneas de las tareas en curso y saltar rápidamente de una aplicación a otra.\n\n
        * Teclado rediseñado, permitiendo una escritura rápida, eficiente y acertada en pantallas de gran tamaño.\n\n
        * Acceso rápido a las características de la cámara como la exposición, foco, flash, zoom, cámara facial-frontal, temporizador u otras.\n\n
        * Habilidad para ver álbumes y otras colecciones de fotos en modo pantalla completa en galería, con un fácil acceso a vistas previas de las fotografías.\n\n
        * Soporte para videochat usando Google Talk.\n\n
        * Aceleración de hardware.
    </string>
    <string name="distribution_codename_text">Nombre</string>
    <string name="distribution_api_text">API</string>
    <string name="distribution_distribution_text">Distribución</string>
    <string name="multiple_screens_label_screen_size">Tamaño de pantalla:</string>
    <string name="multiple_screens_screen_size">Tamaño físico real para cuya medición se considera la diagonal de la pantalla.</string>
    <string name="multiple_screens_label_density">Densidad de pantalla:</string>
    <string name="multiple_screens_density">Cantidad de píxeles dentro de un área física de la pantalla, a la que en general se hace referencia como dpi (puntos por pulgada.</string>
    <string name="multiple_screens_label_orientation">Orientación:</string>
    <string name="multiple_screens_orientation">Orientación de la pantalla desde el punto de vista del usuario.</string>
    <string name="multiple_screens_label_resolution">Resolución:</string>
    <string name="multiple_screens_resolution">Número total de píxeles físicos en una pantalla.</string>
    <string name="multiple_screens_label_dp">Píxeles independientes de la densidad (dp):</string>
    <string name="multiple_screens_dp">Unidad de píxeles virtuales que debes usar al definir el diseño de IU, para expresar las dimensiones o la posición del diseño con independencia de la densidad.</string>
    <string name="platform_architecture_label_linux_kernel">Kernel de Linux:</string>
    <string name="platform_architecture_linux_kernel">Android utiliza el núcleo de Linux 2.6 como una capa de abstracción para el hardware disponible en los dispositivos móviles.</string>
    <string name="platform_architecture_label_hal">Capa de abstracción de hardware (HAL):</string>
    <string name="platform_architecture_hal">Esta capa contiene los drivers necesarios para que cualquier componente hardware pueda ser utilizado mediante las llamadas correspondientes.</string>
    <string name="platform_architecture_label_libraries">Bibliotecas C/C++ nativas:</string>
    <string name="platform_architecture_libraries">OpenGL/SL y SGL, Librería Media Libraries, Librería SSL, Librería SQLite, entre otras.</string>
    <string name="platform_architecture_label_android_runtime">Tiempo de ejecución de Android:</string>
    <string name="platform_architecture_android_runtime">Ejecuta varias máquinas virtuales en dispositivos de memoria baja ejecutando archivos DEX, un formato de código de bytes diseñado especialmente para Android y optimizado para ocupar un espacio de memoria mínimo.</string>
    <string name="platform_architecture_label_frameworks">Framework de Aplicaciones:</string>
    <string name="platform_architecture_frameworks">Representa fundamentalmente el conjunto de herramientas de desarrollo de cualquier aplicación (Sistema de vista, administrador de recursos, administrador de actividad, entre otros).</string>
    <string name="platform_architecture_label_system_apps">Apps del sistema:</string>
    <string name="platform_architecture_system_apps">Aplicaciones del dispositivo.</string>
</resources>