<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="4dp"
        android:text="@string/platform_architecture_label_linux_kernel"
        android:textColor="#000"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="2dp"
        android:text="@string/platform_architecture_linux_kernel"
        android:textColor="#000"
        android:textStyle="italic"/>

    <!-- -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="4dp"
        android:text="@string/platform_architecture_label_hal"
        android:textColor="#000"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="2dp"
        android:text="@string/platform_architecture_hal"
        android:textColor="#000"
        android:textStyle="italic"/>

    <!-- -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="4dp"
        android:text="@string/platform_architecture_label_libraries"
        android:textColor="#000"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="2dp"
        android:text="@string/platform_architecture_libraries"
        android:textColor="#000"
        android:textStyle="italic"/>

    <!-- -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="4dp"
        android:text="@string/platform_architecture_label_android_runtime"
        android:textColor="#000"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="2dp"
        android:text="@string/platform_architecture_android_runtime"
        android:textColor="#000"
        android:textStyle="italic"/>

    <!-- -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="4dp"
        android:text="@string/platform_architecture_label_frameworks"
        android:textColor="#000"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="2dp"
        android:text="@string/platform_architecture_frameworks"
        android:textColor="#000"
        android:textStyle="italic"/>

    <!-- -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="4dp"
        android:text="@string/platform_architecture_label_system_apps"
        android:textColor="#000"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="2dp"
        android:text="@string/platform_architecture_system_apps"
        android:textColor="#000"
        android:textStyle="italic"/>

</LinearLayout>