<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_presentation"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_introduction"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_introduction" />
        <item
            android:id="@+id/nav_life"
            android:icon="@drawable/ic_developer_life"
            android:title="@string/nav_life" />
        <item
            android:id="@+id/nav_future"
            android:icon="@drawable/ic_future"
            android:title="@string/nav_future" />
    </group>

    <item android:title="@string/group_subsection_label">
        <menu>
            <item
                android:id="@+id/nav_references"
                android:icon="@drawable/ic_references"
                android:title="@string/nav_references" />
            <item
                android:id="@+id/nav_thanks"
                android:icon="@drawable/ic_thanks"
                android:title="@string/nav_thanks" />
        </menu>
    </item>

</menu>

<!--
<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>

-->