<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="45dp"
    android:weightSum="100"
    android:baselineAligned="false"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="34"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/distributionCodenameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/distribution_codename_text"
            android:textSize="16sp"
            android:textColor="#FFF"
            android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="33"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/distributionAPIText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/distribution_api_text"
            android:textSize="16sp"
            android:textColor="#FFF"
            android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="33"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/distributionDistributionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/distribution_distribution_text"
            android:textSize="16sp"
            android:textColor="#FFF"
            android:textStyle="bold"/>

    </RelativeLayout>

</LinearLayout>